# reminders

./: COMPONENT_STRUCTURE.md  LICENSE  README.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_NEW.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs  scheduler.rs  service.rs  store.rs  utils.rs
src/components/: AddReminderPanel.tsx  GroupList.tsx  ReminderList.tsx
src/components/GroupList/: AddListButton.tsx  CreateGroupForm.tsx  GroupItem.tsx  MyListsSection.tsx  SmartListItem.tsx  index.ts
src/components/ReminderList/: DetailedAddForm.tsx  QuickAddForm.tsx  ReminderHeader.tsx  ReminderItem.tsx  TimeSection.tsx  index.ts
src/components/magicui/: animated-grid-pattern.tsx  animated-list.tsx  dot-pattern.tsx  orbiting-circles.tsx  shimmer-button.tsx
src/components/shared/: Badge.tsx  ColorPicker.tsx  FormField.tsx  IconButton.tsx  SearchBox.tsx  index.ts
src/components/ui/: button.tsx  input.tsx
src/constants/: options.ts
src/hooks/: notification.ts  useFormState.ts  useFormatters.ts  useMediaQuery.ts  useReminderAPI.ts  useTimeGrouping.ts
src/types/: index.ts
