[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "reminders"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "reminders_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["rt"] }
english-to-cron = "0.1.6"
job_scheduler_ng = "2.2.0"
